重理了临时文件和存储文件

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ mybatis-plus:
 files:
   upload:
     path: D:/files/
-    path2: D:/files/temp/tire/
+    path2: D:/aprograme1/after/src/main/resources/static/temp/tire/
     detect1Path: D:/files/detect1/
     detect2Path: D:/files/detect2/
     recognisePath: D:/files/recognise/
